base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app
spec:
  selector:
    app: course-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
